# mbfastapi

./: pyproject.toml
mb_chatbot/: chat_bot.py  chatui.html  fastapi_mbchatbot.py  load_transform_data.py  metadata_create.py
mb_chatbot/data/: expenses_details.csv  metadata.json  metadata.txt  overall.csv  wells_dca.csv  wells_dca_future_predictions.csv
mb_chatbot/ddb/: oildata.db
mb_chatbot/sql/: create_expenses_table.sql  create_overall_table.sql  create_wells_dca_future_predictions_table.sql  create_wells_dca_table.sql
