[tool.poetry]
name = "mbfastapi"
version = "0.1.0"
description = ""
authors = ["Selva <selva_saravanakumar@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
duckdb = "^1.2.1"
pandas = "^2.2.3"
openai = "^1.65.4"
matplotlib = "<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
